[package]
name = "rosrust_async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosrust = { path = "../rosrust" }
rosrust_actionlib = { path = "../rosrust_actionlib" }
tokio = { version = "1.11.0", features = ["full"] }